@@ -43,5 +43,8 @@
         <dependency org="org.apache.hadoop" name="hadoop-core" rev="${hadoop-core.version}"
           conf="common->master"/>
           -->
-    </dependencies>
+        <dependency org="javax.jms" name="jms" rev="${jms.version}" conf="common->master" />
+ <dependency org="org.apache.activemq" name="activemq-core" rev="${activemq.version}" conf="common->master" />
+<dependency org="javax.management.j2ee" name="management-api" rev="${javax-mgmt.version}" conf="common->master" /> 
+</dependencies>
 </ivy-module>
