@@ -18,4 +18,6 @@ ivy.version=2.2.0
 pig.version=0.8.0
 commons-cli.version=1.0
 #hadoop-core.version=0.20.2 Waiting for a secure version of hadoop in maven
-
+jms.version=1.1
+activemq.version=5.5.0
+javax-mgmt.version=1.1-rev-1
